# python-chebi-utils

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
chebi_utils/: __init__.py  dataset_builder.py  downloader.py  obo_extractor.py  sdf_extractor.py  splitter.py
tests/: test_dataset_builder.py  test_downloader.py  test_obo_extractor.py  test_sdf_extractor.py  test_splitter.py
tests/fixtures/: sample.obo  sample.sdf
