[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chebi-utils"
version = "0.1.0"
description = "Common processing functionality for the ChEBI ontology"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastobo>=0.14",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "rdkit>=2022.09",
    "chembl_structure_pipeline>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
